# libjpengBitmap-master

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: lgdeffective-bitmap.c
app/src/main/java/com/lgdeffective/bitmap/: MainActivity.java
app/src/main/java/com/lgdeffective/bitmap/utils/: EffectiveBitmapUtils.java  UriToPathUtils.java
app/src/main/res/layout/: activity_main.xml
